feat: Implement Advanced Header Detection, Mapping, and Filters
This commit introduces a major set of features and fixes to the Excel Utility, significantly enhancing its power and intelligence when dealing with complex files.

Key Features & Fixes:

1.  **Advanced Header Detection Engine**:
    -   A new heuristic-based engine (`HeaderDetector`) automatically detects multi-row and merged headers by analyzing cell styles, merged regions, and data types.
    -   A new UI dialog (`HeaderDetectionDialog`) allows users to review and override the automatically detected header rows.
    -   Users can now select a "Concatenation Mode" (`LEAF_ONLY` or `BREADCRUMB`) to define how hierarchical headers are constructed.

2.  **Enhanced Auto-Mapping**:
    -   The mapping logic now uses the canonical "breadcrumb" headers (e.g., "Group | Sub-Group | Name") for matching.
    -   A two-pass algorithm is used: first, an exact (case-insensitive, trimmed) match, followed by a fuzzy-logic match (Jaro-Winkler) for any remaining unmapped columns. This dramatically improves mapping accuracy for complex sheets.

3.  **Ignore Column Fix**:
    -   The "Ignore" checkbox in the mapping panel now correctly excludes the selected column from the comparison logic.
    -   The ignored state is now properly saved to and loaded from comparison profiles.
    -   A "Clear All Ignores" button has been added for convenience.
    -   Ignored columns are now visually marked with a strikethrough in the UI.

4.  **Filter System Enhancements**:
    -   A "Clear Filter" button has been added to each file panel, allowing users to easily remove an active filter.
    -   The underlying filtering logic in the `ComparisonService` has been implemented to correctly process the data based on the applied filters.

5.  **New Unit Tests**:
    -   New test classes (`HeaderDetectorTest`, `CanonicalNameBuilderTest`) have been added to validate the new header detection and canonical name generation logic, using a test Exce